<resources>
    <string name="app_name">HealthAI</string>

    <string name="server_address">ws://10.0.2.2:8000/ws/chat/</string>
    <string name="API_KEY"></string>

    <string name="login_page_title">HealthAI Login</string>
    <string name="login_page_username_hint">Username</string>
    <string name="login_page_password_hint">Password</string>
    <string name="login_page_login_text">LOGIN</string>
    <string name="login_page_register_text">CREATE A FREE ACCOUNT</string>
    <string name="login_page_skip_text">CONTINUE AS A GUEST</string>

    <string name="register_page_title">HealthAI Register</string>
    <string name="register_page_username_hint">Username</string>
    <string name="register_page_email_hint">E-Mail</string>
    <string name="register_page_password_hint">Password</string>
    <string name="register_page_password2_hint">Password (again)</string>
    <string name="register_page_register_text">REGISTER</string>
    <string name="register_page_login_text">You have an account? Log in</string>

    <string name="create_profile_page_title">HealthAI Profile</string>
    <string name="create_profile_page_name_hint">Name</string>
    <string name="create_profile_page_enter_text">SAVE PROFILE</string>
    <string name="create_profile_page_gender_hint">Gender</string>
    <string name="create_profile_page_height_hint">Height</string>
    <string name="create_profile_page_height_unit_hint">Unit</string>
    <string name="create_profile_page_weight_hint">Weight</string>
    <string name="create_profile_page_weight_unit_hint">Unit</string>

    <string name="bmi_calculator_page_title">BMI Calculator</string>
    <string name="bmi_calculator_page_height_hint">Height</string>
    <string name="bmi_calculator_page_height_unit_hint">Unit</string>
    <string name="bmi_calculator_page_weight_hint">Weight Unit</string>
    <string name="bmi_calculator_page_weight_unit_hint">Unit</string>
    <string name="bmi_calculator_calculate">Calculate</string>

    <string name="chat_input_hint">Type something&#8230;</string>

    <string name="warning_passwords_not_match">Passwords do not match. Please check.</string>
    <string name="warning_fill_the_blanks">Please fill the necessary fields.</string>
    <string name="warning_not_logged_in">It looks like you haven\'t logged in yet. Please log in to see your profile.</string>
    <string name="warning_stt_not_supported">Your device does not support Speech to Text feature.</string>
    <string name="warning_cant_get_location">There is been an error while trying to get your location.</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="chatbot_picture">chatbot_picture</string>
    <string name="online">online</string>
    <string name="send_button">Send Button</string>
    <string name="record_button">Record Button</string>
    <string name="tts_speak">Please speak now…</string>

    <string name="chat_online">Online</string>
    <string name="chat_error">An unexpected exception has been occurred. The app may function unintended. Please restart the application.</string>

    <string name="chat_welcome1">Hello, I am HealthAI.</string>
    <string name="chat_welcome2">Your personal health assistant.</string>
    <string name="chat_welcome3">How can I help you?</string>

    <string name="alert_dialog_success">Success</string>
    <string name="alert_dialog_warning">Warning</string>
    <string name="alert_dialog_bmi">BMI</string>

    <string name="alert_dialog_verification_sent">You have been successfully created your account. We have sent an email to %email. Please verify your account.</string>
    <string name="alert_dialog_not_verified">Looks like you haven\'t been verified your account. Please check your inbox to verify your email.</string>
    <string name="alert_dialog_bmi_result">Your Body Mass Index is: %bmi. This is considered as %class.</string>

    <string name="button_positive">Okay</string>
    <string name="button_send_again">Send Again</string>

    <string name="menu_main_profile">Profile</string>
    <string name="menu_main_settings">Settings</string>

    <string name="main_start_chat">Start Chat</string>
    <string name="main_info_text">Hello, I\'m HealthAI. Your personal health assistant. You can ask me anything.</string>

    <string name="title_activity_profile">ScrollingActivity</string>
    <string name="profile_page_username">Username</string>
    <string name="profile_page_email">Email</string>
    <string name="profile_page_datejoined">Date Joined</string>
    <string name="profile_page_gender">Gender</string>
    <string name="profile_page_height">Height</string>
    <string name="profile_page_weight">Weight</string>
</resources>